go-basic-camp/examples/k8s-demo/pure-server/k8s-pureserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pureserver

spec:
  replicas: 3
  selector:
    matchLabels:
      app: pureserver

  template:
    metadata:
      name: pureserver
      labels:
        app: pureserver
    # pod 的具体信息
    spec:
      containers:
        - name: pureserver
          image: noahouo/pure-server-k8s:v0.0.4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8999
              name: pureserver
          resources:
            limits:
              cpu: "1"
              memory: "256Mi"
