go-basic-camp/examples/k8s-demo/pure-server/k8s-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pure-mysql
  namespace: default
spec:
  selector:
    app: pure-mysql
  type: NodePort
  # sessionAffinity: None
  # sessionAffinityConfig:
  #   clientIP:
  #     timeoutSeconds: 10800
  ports:
  - name: pure-mysql
    protocol: TCP
    port: 11306
    targetPort: 3306
    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
    # you can specify a value in the `spec.ports[*].nodePort` field.
    nodePort: 30006
