go-basic-camp/examples/k8s-demo/pure-server/k8s-pureserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pureserver
spec:
  type: LoadBalancer
  selector:
    app: pureserver
  ports:
  - protocol: TCP
    name: http
    port: 8999
    targetPort: 8999
