go-basic-camp/examples/k8s-demo/pure-server/k8s-ingress-nginx.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pure-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: noah.webook.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pureserver
                port:
                  number: 8999  # 这里改为与 Service 中定义的端口相同
